--- a/src/app/(home)/components/services/components/serviceGridItem.styles.css
+++ b/src/app/(home)/components/services/components/serviceGridItem.styles.css
@@ -18,18 +18,18 @@
     opacity: 0;
 }
 
-.single-service:hover a::before {
+.singleService:hover a::before {
     right: -60px;
     opacity: 0;
 }
 
-.single-service:hover .service-content a::after {
+.singleService:hover .service-content a::after {
     left: 0;
     opacity: 1;
     background: #fff;
 }
 
-.single-service:hover .service-content a {
+.singleService:hover .service-content a {
     padding-left: 50px;
     color: #fff;
 }
@@ -43,16 +43,47 @@
 
 .services-icon,
 .service-content h5,
-.service-content .content {
+.service-content p {
     transition: .3s;
 }
 
 
-.single-service:hover h5,
-.single-service:hover .content {
+.singleService:hover h5,
+.singleService:hover p {
     color: #fff;
 }
 
-.single-service:hover .services-icon {
+.singleService:hover .services-icon {
     color: #02a2c4;
+    background: #fff;
+}
+
+.serviceItem {
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.singleService {
+    transition: .3s;
+    padding: 60px 40px;
+    background: #f8f8f8;
+    margin: 40px 0 0;
+    /*flex: 0 0 50%;*/
+    /*max-width: 50%;*/
+}
+
+@media (min-width: 992px) {
+    .serviceItem {
+        flex: 0 0 33.333333% !important;
+        max-width: 33.333333% !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .serviceItem {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
