--- a/src/app/(home)/components/OurTeam/TeamGrid/teamGrid.styles.css
+++ b/src/app/(home)/components/OurTeam/TeamGrid/teamGrid.styles.css
@@ -11,9 +11,12 @@
     margin-top: 30px;
     visibility: visible;
     animation-name: fadeInUp;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
 }
 
-.innerBox {
+.teamInnerBox {
     position: relative;
     overflow: hidden;
 }
@@ -27,27 +30,39 @@
     position: relative;
 }
 
-.teamBox .innerBox:hover .socialLinks a {
-    transition: transform 0.3s ease 0.6s, opacity 0.3s ease 0.6s, color 0.3s linear;
+.imageBox figure {
+    margin: 0 0 1rem;
 }
 
-.teamBox .innerBox:hover .infoBox .name {
+.imageBox img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.teamInnerBox:hover .socialLinks a {
+    transition: transform 0.3s ease 0.6s, opacity 0.3s ease 0.6s, color 0.3s linear;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.teamInnerBox:hover .infoBox .name {
     padding-bottom: 0;
 }
 
-.teamBox .innerBox:hover .infoBox {
+.teamInnerBox:hover .infoBox {
     margin-top: 0;
     top: 50%;
     transform: translateY(-50%);
     transition: all 500ms ease;
 }
 
-.teamBox .innerBox:hover .imageBox::before {
+.teamInnerBox:hover .imageBox::before {
     top: 0;
     margin-top: 0;
 }
 
-.teamBox .imageBox::before {
+.imageBox::before {
     position: absolute;
     left: 0;
     top: 100%;
@@ -73,6 +88,7 @@
 .infoBox .name {
     position: relative;
     padding: 15px 0;
+    margin-bottom: .5rem;
     font-size: 22px;
     line-height: 30px;
     color: #ffffff;
@@ -105,12 +121,20 @@
     transform: translateX(-50px);
 }
 
-.imageBox img {
-    width: -webkit-fill-available !important;
+.socialLinks svg {
+    user-select: none;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    flex-shrink: 0;
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    fill: currentColor;
+    font-size: 1.5rem;
 }
 
-.aboutImage img {
-    max-width: 95%;
+.socialLinks a:hover {
+    background-color: #222222;
+    color: #ffffff;
 }
 
 .container #counter-area {
@@ -118,15 +142,22 @@
     padding: 30px 0;
 }
 
-@media (min-width: 992px) {
-    .col-lg-6 {
+@media only screen and (min-width: 992px) {
+    .teamBlock {
+        flex: 0 0 25% !important;
+        max-width: 25% !important;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .teamBlock {
         flex: 0 0 50%;
         max-width: 50%;
     }
 }
 
-@media (min-width: 768px) {
-    .col-md-12 {
+@media only screen and (min-width: 576px) {
+    .teamBlock {
         flex: 0 0 100%;
         max-width: 100%;
     }
